--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "eslint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "electron": "^1.8.2",
     "menubar": "^5.2.3",
     "openpgp": "^2.6.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.2"
   }
 }
