--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "openpgp": "^2.6.2"
   },
   "devDependencies": {
-    "eslint": "^4.18.2"
+    "eslint": "^4.18.2",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10"
   }
 }
