--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "clipboard": "^2.0.0",
+    "crypto-js": "^3.1.9-1",
     "electron": "^1.8.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
